tests/framework/engine/build/errors/StreamCancelledError.js
"use strict";
Object.defineProperty(exports, "__esModule", { value: true });
class StreamCancelledError extends Error {}
exports.default = StreamCancelledError;
